uploading completed assignment

--- a/leaflet-part-1/index.html
+++ b/leaflet-part-1/index.html
@@ -19,7 +19,26 @@
 <body>
 
   <!-- The div that holds our map -->
-  <div id="map"></div>
+  <div id="map">
+  </div>
+  <div class="legend">
+    <div class="legend-element">
+      <p>100</p>
+      <div style='background-color:red ;' class="legend-box"></div>
+    </div>
+    <div class="legend-element">
+      <p>80</p>
+      <div style='background-color:orange ;' class="legend-box"></div>
+    </div>
+    <div class="legend-element">
+      <p>50</p>
+      <div style='background-color:yellow ;' class="legend-box"></div>
+    </div>
+    <div class="legend-element">
+      <p>-10</p>
+      <div style='background-color:lightgreen ;' class="legend-box"></div>
+    </div>
+  </div>
 
   <!-- Leaflet JS -->
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
